--- a/01-gallery.html
+++ b/01-gallery.html
@@ -13,14 +13,10 @@
 
     <!-- Add gallery items to this list -->
     <ul class="gallery"></ul>
-
     <script src="
-https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js
-"></script>
+    https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.2/simple-lightbox.min.js"></script>
     <link
-      href="
-https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css
-"
+      href="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css"
       rel="stylesheet"
     />
     <script src="js/01-gallery.js" type="module"></script>
